<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.lihong</groupId>
    <artifactId>lihong</artifactId>
    <version>1.0.0</version>
    <name>SureFire TestNG Runner</name>
    <description>lihong</description>
    <packaging>pom</packaging>
    <modules>
        <module>test</module>
    </modules>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.4</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources/META-INF</directory>
                <targetPath>META-INF</targetPath>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>7</source>
                    <target>7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
                <version>3.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.8.1</version>
                <configuration>
                    <!-- 根据JDK版本配置，jdk8: -Xmx1024m -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=512m -->
                    <argLine>-Xmx512M -XX:PermSize=1024M -XX:MaxPermSize=1024M</argLine>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <excludes>
                    </excludes>
                    <!-- 如无特殊需求，将forkMode设置为once -->
                    <forkMode>once</forkMode>
                    <testFailureIgnore>true</testFailureIgnore>
                    <junitArtifactName>none:none</junitArtifactName>
                    <testNGArtifactName>org.testng:testng</testNGArtifactName><!--
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/suite.xml</suiteXmlFile>
                    </suiteXmlFiles>-->

                    <!--<junitArtifactName>junit:junit</junitArtifactName>
                    <testNGArtifactName>none:none</testNGArtifactName>-->
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
